api(getAcceptedAndRejectedSalons)
